--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <header>
+<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-right-square abrirHeader" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm4.5 5.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z"/>
+</svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-left-square fecharHeader" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+</svg>
         <img src="/img/logo_transparente.png" class="imgLogo" alt="img logo">
         <nav>
             <ul>
@@ -58,9 +64,47 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-bell iconSininho" viewBox="0 0 16 16">
 <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6"/>
 </svg>
-
         </aside>
     </header>
+    <main>
+        <section class="container-search">
+            <input type="search" name="search" id="search">
+            <span class="containerIconSearch">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-search iconSearch" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                </svg>
+            </span>
+        </section>
+        <section class="container-categorias">
+            <section class="section1">
+                <h1>Categorias</h1>
+                10+ Categories added this week
+            </section>
+            <section class="section2">
+                <h3>Ver mais</h3>
+            </section>
+            <section class="section3">
+                <section class="categoria1">
+                    <img src="/img/burguer1.png" class="imgBurguer" alt="">
+                </section>
+                <section class="categoria1">
+                    <img src="/img/" class="imgBurguer" alt="">
+                </section>
+                <section class="categoria1">
+                    <img src="/img/" class="imgBurguer" alt="">
+                </section>
+                <section class="categoria1">
+                    <img src="/img/" class="imgBurguer" alt="">
+                </section>
+                <section class="categoria1">
+                    <img src="/img/" class="imgBurguer" alt="">
+                </section>
+                <section class="categoria1">
+                    <img src="/img/" class="imgBurguer" alt="">
+                </section>
+            </section>
+        </section>
+    </main>
     <script src="script/script.js"></script>
 </body>
 </html>
