função de adcionar numero do pedido e nome adcionado

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </aside>
     </header>
     <main>
-        <section class="container-carrinho">
+        <section class="container-carrinho" id="carrinho">
             <section class="header-carrinho">
                 <h1>DELIVERY ADDRESS</h1>
              <article class="infos">
@@ -87,12 +87,12 @@
                         Cart</p>   
                     </span>
                     
-                    <p class="orderId">Order ID: #0385</p>
+                    <p id="orderId">Order ID: </p>
                  </article>
                  <section class="main-pedido1">
-                        <img src="/img/burguer1.png" class="imgBurguer1" alt="">
+                        <img src="/img/burguer1.png" class="imgBurguer" alt="">
                     <section class="infoPedido">
-                        <p class="titlePedido">Burguer Pizle</p>
+                        <p class="titlePedido" id="titleProduto">Burguer Pizle</p>
                         <aside class="btnsPedido">
                         <button>+</button>
                         <p id="QtdPedido">0</p>
@@ -158,7 +158,11 @@
             </section>
             <section class="produto1">
                     <img src="/img/burguer1.png" class="imgBurguer1" alt="">
+                    <aside>
+                        <h1 id="titleProduto1">Buguer caseiro</h1>
+                        <p id="valor">$40.00</p>
                     <button id="adcionarCarrinho">Comprar</button>
+                    </aside>
             </section>
         </section>
        
