função de adcionar/alterar informações do produto adcionada

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                  <section class="main-pedido1">
                         <img src="/img/burguer1.png" class="imgBurguer" alt="">
                     <section class="infoPedido">
-                        <p class="titlePedido" id="titleProduto">Burguer Pizle</p>
+                        <p class="titlePedido" id="titleProduto"></p>
                         <aside class="btnsPedido">
                         <button>+</button>
                         <p id="QtdPedido">0</p>
@@ -110,8 +110,8 @@
                     <p class="payMe">PayMe</p>
                 </article>
                 <article class="infoComprar">
-                    <p id="SubTotal">SubTotal: $115</p>
-                    <p id="CustoEntrega">Delivery change: $15</p>
+                    <p id="SubTotal">SubTotal: $</p>
+                    <p id="CustoEntrega">Delivery change: $</p>
                     <span class="secaoValores">
                         <h2 id="IdTotal">Total</h2>
                     <h2 id="valorTotal">$130.00</h2>
@@ -145,24 +145,38 @@
                 </section>
                 <section class="categoria2">
                     <a href="#">
-                        <img src="/img/burguer1.png" class="imgBurguer" alt="">
+                        <img src="/img/burguer2Vegano.png" class="imgBurguer" alt="">
                     </a>
                 </section>
             </section>
         </section>
-        <section class="container-produtos">
+        <section class="container-produtosPai">
             <section class="header-produtos">
-                <section class="title-produtos">
-                    <h1>Produtos</h1>
-                </section>
+            <section class="title-produtos">
+                <h1>Produtos</h1>
             </section>
+        </section>
+            <section class="container-produtosFilho">
             <section class="produto1">
                     <img src="/img/burguer1.png" class="imgBurguer1" alt="">
-                    <aside>
-                        <h1 id="titleProduto1">Buguer caseiro</h1>
-                        <p id="valor">$40.00</p>
-                    <button id="adcionarCarrinho">Comprar</button>
+                    <aside class="infoProduto1">
+                        <h1 id="titleProduto1">Hamburguer de Bacon caseiro</h1>
+                        <p id="Produto1valor">$45.20</p>
+                        <aside>
+                            <button class="btnComprar">Comprar</button>
+                        </aside>
                     </aside>
+            </section>
+            <section class="produto1">
+                    <img src="/img/burguer2Vegano.png" class="imgBurguer1" alt="">
+                    <aside class="infoProduto1">
+                        <h1 id="titleProduto2">Hamburguer Vegano caseiro</h1>
+                        <p id="Produto2valor">$25.50</p>
+                        <aside>
+                            <button class="btnComprar">Comprar</button>
+                        </aside>
+                    </aside>
+            </section>
             </section>
         </section>
        
